# minimax-ws-proxy

./: .env.example  README.md  config.example.json  proxy.py  pyproject.toml  run.sh
src/minimax_ws_proxy/: __init__.py  __main__.py  backends.py  config.py
